<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnRegisterNext"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frm_Register1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewcleitne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_id_number"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/commun_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtRegisterNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView85"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_user_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/commun_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtRegisterTipoCita"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginx_bottons"
            android:layout_marginEnd="@dimen/marginx_bottons"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNextRegister1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/txt_next" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>