<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frm_Register_Appointment2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/large_margin">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_appointment_time"
                android:textSize="16dp"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtRegisterAppointmentTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/commun_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_payment_for_the_appointment"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/dark_blue"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtRegisterAppointmentPay"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/marginx_buttonsStart"
            android:layout_marginEnd="@dimen/marginx_buttonsStart">

            <Button
                android:id="@+id/btnRegisterAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_register_appointment"
                android:backgroundTint="@color/dark_blue"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>